Recette : fix flip card overflow iOS zindex

--- a/src/app/pages/player/assessment/assessment.page.scss
+++ b/src/app/pages/player/assessment/assessment.page.scss
@@ -22,6 +22,10 @@ ion-footer{
 
   &.flipped .flipper {
     transform: rotate3d(0, -1, 0, 180deg);
+
+    .back {
+      z-index: 1;
+    }
   }
 
   .flipper {
@@ -45,6 +49,7 @@ ion-footer{
 
     .front {
       transform: rotate3d(0, 0, 0, 0);
+      z-index: 1;
     }
 
     .back {
